# Autonomous-Cloud-Incident-Analysis-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start_services.ps1
agent/: agent.py  analysis.py  config.py  models.py
backend/: db.py  main.py
clients/: aws_client.py  mcp_clients.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/Analysis/: AnalysisForm.jsx  AnalysisResult.jsx  ServiceAnalysis.jsx  ServiceHealth.jsx
frontend/src/components/Dashboard/: MetricsChat.jsx  ServiceCard.jsx  StatusBadge.jsx
frontend/src/components/History/: HistoryCard.jsx
frontend/src/components/Layout/: Header.jsx  Layout.jsx  Sidebar.jsx
frontend/src/components/common/: EmptyState.jsx  ErrorBoundary.jsx  LoadingSpinner.jsx
frontend/src/hooks/: useAnalysis.js
frontend/src/pages/: AnalysisDetails.jsx  AnalysisHistory.jsx  Dashboard.jsx  HomePage.jsx  IncidentAnalysis.jsx  ReportPage.jsx  SettingsPage.jsx
frontend/src/services/: api.js
mcp-servers/aws-mcp/: README.md  main.py  pyproject.toml
mcp-servers/github-mcp/: README.md  main.py  pyproject.toml
mcp-servers/kubernetes-mcp/: README.md  main.py  pyproject.toml
